# lotr

./: .gitignore  README.md  main.py  pyproject.toml
app/: crud.py  database.py  main.py  models.py  schemas.py
tests/: test_main.py
