[tool.poetry]
name = "lotr"
version = "0.1.0"
description = ""
authors = ["Kurt Portelli <kurt.portelli@gig.com>"]

[tool.poetry.dependencies]
python = "3.10.2"
fastapi = "0.75.1"
sqlalchemy = "1.4.35"
uvicorn = "0.17.6"
requests = "2.27.1"

[tool.pytest.ini_options]
minversion = "6.0"
filterwarnings = '''
    ignore::pytest.PytestWarning
    ignore::sqlalchemy.exc.SAWarning
'''

testpaths = [
    "tests",
]

[tool.poetry.dev-dependencies]
pytest = "7.1.1"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
